@@ -1,9 +1,9 @@
 AUX README.Gentoo 823 RMD160 be59c37906fca17fa25f6781d3f5e7abc114dc57 SHA1 5a1f126af728f5220b97623050e2f9b1ea5ae58e SHA256 3985fd1810f660ea1c1f2732f719b069b6934d62d8d9e8a09287e63f049ba27d
 AUX code2color.patch 1110 RMD160 712f7b79c94f92ee62825d5f53627f18fae693d2 SHA1 a82f937f3a923b52adc4f14cfc9b641903884839 SHA256 a3887126826ef0b4b821bd97cf4e7abfc8b1c9280bf2bb18a2a4cec9a2973936
-AUX lesspipe.sh 7295 RMD160 9f9879a6c356127ae4d27ac587a10a7e4e9fa902 SHA1 0d302a8108583273325832bf6726ef5e5b63e3a7 SHA256 2e254457fdcdd59d93d8b6d27de199e5450d0b7a7db47e8fada28674da21bdee
+AUX lesspipe.sh 7245 RMD160 c7fb8ed5351864a4e5735118a47b018b7f0c9635 SHA1 05018b6749b182b36d92f8d0cda8846f23cf9dae SHA256 ac4130bd95c0dcbfbffb3b9e3b88b39540af23ca356b8ba75907f41990a6c250
 DIST code2color 199875 RMD160 378d340a20c3fe500f19116220d54816fe279225 SHA1 b30526dd52c747b8bd6dcf53cf5cc94824c47feb SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d
-DIST less-441.tar.gz 306878 RMD160 ff57c76ff4de17dd19663b1dca24051b9181ceed SHA1 241136cc2c7f75c58ad9d1b73f783d5a6aa10d8c SHA256 d8c9add08bfd64654933b6c125690a4d78c458e069bf69b36a4d0c390df2772c
+DIST less-443.tar.gz 307234 RMD160 e5e7b72266d218a225be7d28c4b8d8d9c0fc75d2 SHA1 72cf3d3c77990e04ad04ea63b377b893c8a7a2cd SHA256 a4c3e8af81fd0944941ee7c74eecc7759422a227df52335e899e69de5eae30ca
 DIST less-select-patch-436.tar.gz 47383 RMD160 5ccbe853d1f6ce5940f283bd8265ce8b75e20363 SHA1 21f3f8b16be8cd0724820c167d6f685d236cec36 SHA256 bbdd0ee9241803b8de719c358090354bde63472d1df6db271a50be51bfc800f3
-EBUILD less-select-441.ebuild 2383 RMD160 1afaaa4e60dca6773eb1237afdb996465839a859 SHA1 8ad4fcaa1368c5f305caff5d4b80f21959add3a3 SHA256 4759da49a8d51828fb939ae8a51b6d246a4de955e21d2ac420c66a3061f1ae5f
-MISC ChangeLog 2084 RMD160 c24e9cb9280ca4ea61d76d85b63013472aa878c1 SHA1 2db65d8483c368ed54822114fb76ebf26052686d SHA256 0f17b41792342fe2d90bdf90b596ea1ddc7ba07e71c940315e16b8b7721f24c9
+EBUILD less-select-443.ebuild 2383 RMD160 1afaaa4e60dca6773eb1237afdb996465839a859 SHA1 8ad4fcaa1368c5f305caff5d4b80f21959add3a3 SHA256 4759da49a8d51828fb939ae8a51b6d246a4de955e21d2ac420c66a3061f1ae5f
+MISC ChangeLog 2228 RMD160 7e936a31d7472be9d7415fdaeff2b0a152bedc17 SHA1 56a307f43db063e059574c4dface52fe8aacbbfd SHA256 e58fcc3a851eac8b604cb7dcd2ecf8a112d785dfec3f22a577e10055b03925b7
 MISC metadata.xml 502 RMD160 3e3f84a9d63d37d044acba98f3add536f1dc98a6 SHA1 a45389d6d02b23a47a70a174d4d49b9c24480f62 SHA256 24b8610aa08d7c0ef1f1e84af06ffe327396a5132cb9bf51c426496e4ad8df61
