@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*less-select-443.ebuild (11 Apr 2011)
+
+  11 Apr 2011; Martin Väth <martin@mvath.de>
+  Bump less version. Remove old ebuild.
+
 *less-select-441.ebuild (28 Feb 2011)
 
   29 Feb 2011; Martin Väth <martin@mvath.de>
